# quad-log-test

./: Cargo.toml  README.md  fmt.sh  quad.toml  run.sh
java/: .FileOpen.java.swp  .MainActivity.java.swp  FileOpen.java  MainActivity.java
src/: main.rs
