[package]
name = "quad-log-test"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
res = "android_res"
icon = "@mipmap/ic_launcher"
label = "LOG TEST"
min_sdk_version = 26
[[package.metadata.android.permission]]
name = "android.permission.ACCESS_FINE_LOCATION"
max_sdk_version = 30

[dependencies]
macroquad = "=0.3.24"
once_cell = "1"

